--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "A node server for interacting with the calculator api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,15 @@
   "homepage": "https://github.com/Duriga-Technologies/node-server#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.2"
   },
   "devDependencies": {
+    "axios": "^0.23.0",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.12"
+    "firebase-admin": "^10.0.0",
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.7.0"
   }
 }
