--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.2"
+    "mysql2": "^2.3.3",
+    "read-excel-file": "^5.2.25"
   },
   "devDependencies": {
     "axios": "^0.23.0",
     "cors": "^2.8.5",
     "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.7.0"
+    "sequelize": "^6.11.0"
   }
 }
